Fixed bar-sep lineup issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   position: relative;
   width: 100%;
   height: 6px;
-  top: 45%;
+  top: 50%;
   background-color: white;
 }
 
